# rust-ddd

./: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  Rust DDD.session.sql  build_assignments_image.sh  build_availabilities_image.sh  build_fixtures_image.sh  build_referees_image.sh  build_teams_image.sh  build_venues_image.sh  clean_db.sh  run.sh  run_assignments_image.sh  run_availabilities_image.sh  run_microservices.sh
backend/: Cargo.toml  start_db.sh
backend/config/: config.sh
backend/db/: docker-compose.yaml  init.sql
backend/src/: application.rs  db.rs  main.rs  models.rs  ports.rs
backend/src/adapters/: db.rs
backend/src/adapters/db/: assignment_repo_pg.rs  availability_repo_pg.rs  fixture_repo_pg.rs  referee_repo_pg.rs  team_repo_pg.rs  venue_repo_pg.rs
backend/src/application/: assignment_services.rs  availability_services.rs  fixture_services.rs  referee_services.rs  team_services.rs  venue_services.rs
backend/src/domain/: aggregates.rs  repositories.rs
backend/src/domain/aggregates/: assignment.rs  fixture.rs  referee.rs  team.rs  venue.rs
backend/src/domain/repositories/: assignment_repo.rs  availability_repo.rs  fixture_repo.rs  referee_repo.rs  team_repo.rs  venue_repo.rs
backend/src/handlers/: referee.rs
backend/src/ports/: rest.rs
backend/src/ports/rest/: assignments.rs  availabilities.rs  fixture.rs  referee.rs  shared.rs  state.rs  team.rs  venues.rs
db/secrets/: postgres_db
frontend/: Cargo.toml  Dockerfile  build_and_run.sh  delete_frontend_image.sh  docker-compose.yaml  stop_frontend.sh
frontend/src/: app.rs  components.rs  main.rs
frontend/src/components/: assignments.rs  availabilities.rs  fixture_list.rs  home.rs  referee_details.rs  referee_list.rs  team_details.rs  team_list.rs  venue_details.rs  venue_list.rs
microservice/: build_and_run_all.sh  clean_all_db.sh  clean_debezium.sh  clean_jaeger.sh  clean_kafka.sh  clean_nginx.sh  clean_redis.sh  create_debezium_connectors.sh  create_domain_events_topic.sh  delete_service_images.sh  kill_all.sh  run_all.sh  run_services.sh  start_all_db.sh  start_debezium.sh  start_jaeger.sh  start_kafka.sh  start_keycloak.sh  start_nginx.sh  start_redis.sh  stop_services.sh
microservice/ADR/: 001-slicing-microservices.md  002-separate-dbs-per-microservice.md  003-api-gateway.md  004-caching-for-performance.md  005-domainevent-broadcasting.md  006-saga-committing-assignments-microservices.md
microservice/Referees/: Cargo.toml
microservice/apigateway/: docker-compose.yaml  nginx.conf  run.sh
microservice/assignments/: Cargo.toml  Dockerfile  clean_db.sh  run_instance_1.sh  run_instance_2.sh
microservice/availabilities/: Cargo.toml  Dockerfile  clean_db.sh  run.sh  run_instance_1.sh  run_instance_2.sh
microservice/debezium/: connector-config-assignments.json  connector-config-venues.json  create_domain_events_topics.sh  docker-compose.yaml
microservice/fixtures/: Cargo.toml  Dockerfile  clean_db.sh  run.sh  run_instance_1.sh  run_instance_2.sh
microservice/kafka/: docker-compose.yaml  print_messages.sh
microservice/redis/: docker-compose.yaml
microservice/referees/: .env  Cargo.toml  Dockerfile  clean_db.sh  prepare_sqlx_queries.sh  run.sh  run_instance_1.sh  run_instance_2.sh
microservice/services/: docker-compose.yaml
microservice/services/auth/: Cargo.toml  Dockerfile  run_instance_1.sh  run_instance_2.sh
microservice/services/auth/config/: config.sh
microservice/services/auth/src/: config.rs  handlers.rs  lib.rs  main.rs
microservice/services/shared/: .env  Cargo.toml  README.md  debezium_test.json
microservice/services/shared/.sqlx/: query-302519743aa348d744b645ec1231efd546fbcc3cf04be6bcae93551d9a9b34e0.json  query-ea89a6ee4e61f8b27386bfb64a4a5ead7bcc38531ba8c2ebd526f2eb753510ac.json
microservice/services/shared/db/: domain_event.sql
microservice/services/shared/src/: domain_events.rs  domain_ids.rs  lib.rs  token.rs
microservice/services/shared/src/resolvers/: traits.rs
microservice/shared/: Cargo.toml  debezium_test.json
microservice/shared/.sqlx/: query-1cf7b1719ac0f979776d4444ab31fa0ea2b1eecd85c0013d14d743b2ba7277b0.json  query-b2491d66e3741d1e581f69d6e69ab5eeae6a476af6cebc4179079167d7616615.json
microservice/shared/db/: domain_event.sql
microservice/shared/src/: domain_event_repo.rs  domain_events.rs  domain_ids.rs  lib.rs
microservice/shared/src/resolvers/: impls.rs  traits.rs
microservice/teams/: .env  Cargo.toml  Dockerfile  clean_db.sh  run.sh  run_instance_1.sh  run_instance_2.sh
microservice/teams/config/: config.sh
microservice/teams/db/: docker-compose.yaml  init.sql
microservice/teams/src/: application.rs  lib.rs  main.rs
microservice/teams/src/adapters/db/: team_repo_pg.rs
microservice/teams/src/application/: team_services.rs
microservice/teams/src/domain/aggregates/: team.rs
microservice/teams/src/domain/repositories/: team_repo.rs
microservice/teams/src/ports/kafka/: domain_events_handler.rs
microservice/teams/src/ports/rest/: teams.rs
microservice/tracing/: docker-compose.yaml
microservice/venues/: .env  Cargo.toml  Dockerfile  clean_db.sh  prepare_sqlx_queries.sh  run.sh  run_instance_1.sh  run_instance_2.sh  tests.sh
monolith/: Cargo.toml  prepare_sqlx_queries.sh  run.sh  start_db.sh
monolith/.cargo/: config.toml
monolith/.sqlx/: query-2f69274822ae16a750d588198725d4e4fc467161ef914210b2d832d2811683a8.json  query-2faec40e84eb2f139885490749e7cbd2bd3f382231a9f3ed2c81fc9a7a79889f.json  query-3f62eceaaf44e90b4a01a54a7fc52a5c80c2b8fb49cafe03709374e6e3fcf526.json  query-3fa823af41039867326ab74a8439281e68a9877e27e31a90db3c620d1adfa072.json  query-4c49dbc73408394103668711d730aa569e690dc7c453a6e71c043844377c224b.json  query-533edeac38c1f4051a66794e8bbfa68778a5cb92c3a48b494258bb50ccce6bbc.json  query-62aa969ba21b2673f66c62161a2ddd8680d47fbd79fdb942633f63a0fe34997b.json  query-a6d51d5da80e06ba7e60fd1261b8016cc27cec13b8b0f302ca355df773511f54.json  (+10 more)
reports/: README.md
restinterface/: Cargo.toml
restinterface/src/: app_error.rs  lib.rs
shared/: Cargo.toml
src/: config.rs  handlers.rs  main.rs
(+228 files in other folders)
