[workspace]
resolver = "2"
edition = "2021"

members = [
    "monolith",
    "frontend",
    "restinterface",
    "shared",
    "microservice/referees",
    "microservice/venues",
    "microservice/teams",
    "microservice/fixtures",
    "microservice/availabilities",
    "microservice/assignments",
]
