[workspace]
resolver = "2"
edition = "2021"

members = [
    "monolith",
    "frontend",
    "restinterface",
    "shared",
    "microservice/services/referees",
    "microservice/services/venues",
    "microservice/services/teams",
    "microservice/services/fixtures",
    "microservice/services/availabilities",
    "microservice/services/assignments",
]
