[package]
name = "rust-ddd"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
dotenv = "0.15"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
mockall = "0.13.0"
async-trait = "0.1.83"
