[package]
name = "restinterface"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum = "0.7.7"
log = "0.4.22"
