[package]
name = "restinterface"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.26"
