[package]
name = "microservices-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "serde"] }
restinterface = { path = "../../restinterface" }
mockall = "0.13.0"
redis = "0.27.5"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
rdkafka = { version = "0.25", features = ["cmake-build"] }
async-trait = "0.1.83"
