[package]
name = "teams"
version = "0.1.0"
edition = "2021"

[dependencies]
restinterface = { path = "../../restinterface" }
microservices-shared = { path = "../shared" }
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
clap = { version = "4.5.20", features = ["unstable-doc"] }
mockall = "0.13.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
