[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
microservices-shared = { path = "../shared" }
shared = { path = "../../../shared" }
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
redis = "0.27.5"
opentelemetry = "0.26.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
