[package]
name = "microservices-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "serde"] }
restinterface = { path = "../../../restinterface" }
mockall = "0.13.0"
redis = "0.27.5"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
rdkafka = { version = "0.25", features = ["cmake-build"] }
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
tonic = { version = "0.12.3", features = ["transport"] }
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26.0", features = [
    "metrics",
    "logs",
    "serialize",
] }
opentelemetry-stdout = "0.26.0"
opentelemetry-appender-log = "0.26.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
serde-query = "0.2.0"
jsonwebtoken = "9.3.1"
